# asynco

./: .gitignore  main.py  pyproject.toml
asynco/: __init__.py  main.py
tests/: test_main.py
